--- a/SM/SM.vcxproj.filters
+++ b/SM/SM.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="HeaderCtrlCl.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MyButton.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SM.cpp">
@@ -78,6 +81,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="HeaderCtrlCl.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MyButton.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
