--- a/SM/SM.vcxproj
+++ b/SM/SM.vcxproj
@@ -112,11 +112,14 @@
     <ClInclude Include="LOGIN.h" />
     <ClInclude Include="MsgWindow.h" />
     <ClInclude Include="MyButton.h" />
+    <ClInclude Include="PicButton.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SM.h" />
     <ClInclude Include="SMDlg.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TransParentEdit.h" />
+    <ClInclude Include="WEComboBox.h" />
     <ClInclude Include="WininetHttp.h" />
   </ItemGroup>
   <ItemGroup>
@@ -125,23 +128,33 @@
     <ClCompile Include="LOGIN.cpp" />
     <ClCompile Include="MsgWindow.cpp" />
     <ClCompile Include="MyButton.cpp" />
+    <ClCompile Include="PicButton.cpp" />
     <ClCompile Include="SM.cpp" />
     <ClCompile Include="SMDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TransParentEdit.cpp" />
+    <ClCompile Include="WEComboBox.cpp" />
     <ClCompile Include="WininetHttp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SM.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\mininews\mininews\res\bitmap3.bmp" />
     <Image Include="..\..\MiniNews\MiniNews\Res\Skin_QQ.bmp" />
     <Image Include="..\..\MiniNews\MiniNews\Res\Skin_WangWang.bmp" />
     <Image Include="..\..\MiniNews\MiniNews\Res\Skin_XunLei.bmp" />
     <Image Include="C:\Users\Administrator\Desktop\bg.BMP" />
+    <Image Include="C:\Users\Administrator\Desktop\btn_blue_off.png" />
+    <Image Include="C:\Users\Administrator\Desktop\泰安项目文件\blue_off.bmp" />
+    <Image Include="C:\Users\Administrator\Desktop\泰安项目文件\blue_on.bmp" />
+    <Image Include="C:\Users\Administrator\Desktop\泰安项目文件\white_off.bmp" />
+    <Image Include="C:\Users\Administrator\Desktop\泰安项目文件\white_on.bmp" />
     <Image Include="res\CBTN.bmp" />
+    <Image Include="res\combox.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
