--- a/SM/SM.vcxproj
+++ b/SM/SM.vcxproj
@@ -62,7 +62,9 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>E:\study\toolsForVS2010\jsonPP\lib\debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>json.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>json.lib;SkinPPWTL.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <StackReserveSize>
+      </StackReserveSize>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -118,7 +120,6 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TransParentEdit.h" />
-    <ClInclude Include="WEComboBox.h" />
     <ClInclude Include="WininetHttp.h" />
   </ItemGroup>
   <ItemGroup>
@@ -135,7 +136,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TransParentEdit.cpp" />
-    <ClCompile Include="WEComboBox.cpp" />
     <ClCompile Include="WininetHttp.cpp" />
   </ItemGroup>
   <ItemGroup>
